package budgetsaving.saving.utils;

public enum SavingStatus {
    ACTIVE, COMPLETED, DELETED
}
